--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -12,28 +12,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body style="display: flex; flex-direction: column; font-family: Open Sans; background-color: #f3f4f6; width: 100%; height: 100vh; padding: 2rem; align-items: center; justify-content: center;">
     <div style="display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; width: 30%; height: 70%; background-color: #bfdbfe; border-radius: 1rem;
     gap: 4rem; ">
         <div style="font-size: 6rem;">ERPSolution</div>
-        <div>
+        <form action="/" id="passwordForm">
             <h2>Nueva contraseña</h2>
-            <form action="post" style="display: flex; flex-direction: column; gap:2rem">
+            <div  style="display: flex; flex-direction: column; gap:2rem">
                 <div style="display: flex; flex-direction: column;">
                     <span>Contraseña</span>
-                    <input type="text">
+                    <input id="password" class="password" type="text">
                 </div>
                 <div style="display: flex; flex-direction: column;">
                     <span>Confirmar contraseña</span>
-                    <input type="text">
+                    <input id="passwordConfirmation" class="passwordConfirmation" type="text">
                 </div>
     
-                <button>
+                <button class="confirmButton">
                     Crear contraseña
                 </button>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
+    <script>
+        $(function() {
+            $("form").submit(function(event) {
+                event.preventDefault();
+
+                const password = $("input.password").val();
+                const passwordConfirmation =  $("input.passwordConfirmation").val();
+
+                if(password.length <= 5 || passwordConfirmation.length <= 5) {
+                    alert("Contraseña muy corta. Prueba otra vez")
+                    return;
+                }
+
+                if(password !== passwordConfirmation) {
+                    alert("Las contraseñas no coinciden. Prueba otra vez")
+                    return;
+                }
+                
+                const url = window.location.href;
+                let posting = $.post(url, { password: password } );
+ 
+                posting.done(function( data ) {
+                    let content = $( data ).find( "#content" );
+                    $( "#result" ).empty().append( content );
+                });
+            });
+        });
+    </script>
 </body>
 </html>
+
+<!-- $.post( "ajax/test.html", function( data ) {
+                    $( ".result" ).html( data );
+                }); -->
