--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -14,12 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
-<body style="display: flex; flex-direction: column; font-family: Open Sans; background-color: #f3f4f6; width: 100%; height: 100vh; padding: 2rem; align-items: center; justify-content: center;">
+<body id="contenido" style="display: flex; flex-direction: column; font-family: Open Sans; background-color: #f3f4f6; width: 100%; height: 100vh; padding: 2rem; align-items: center; justify-content: center;">
     <div style="display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; width: 30%; height: 70%; background-color: #bfdbfe; border-radius: 1rem;
     gap: 4rem; ">
-        <div style="font-size: 6rem;">ERPSolution</div>
+        <div style="font-size: 4rem;">ERPSolution</div>
         <form action="/" id="passwordForm">
-            <h2>Nueva contraseña</h2>
+            <h3>Nueva contraseña</h3>
             <div  style="display: flex; flex-direction: column; gap:2rem">
                 <div style="display: flex; flex-direction: column;">
                     <span>Contraseña</span>
@@ -40,7 +40,6 @@
         $(function() {
             $("form").submit(function(event) {
                 event.preventDefault();
-
                 const password = $("input.password").val();
                 const passwordConfirmation =  $("input.passwordConfirmation").val();
 
@@ -57,16 +56,11 @@
                 const url = window.location.href;
                 let posting = $.post(url, { password: password } );
  
-                posting.done(function( data ) {
-                    let content = $( data ).find( "#content" );
-                    $( "#result" ).empty().append( content );
+                posting.done(function(data) {
+                    $("#contenido").html(data);
                 });
             });
         });
     </script>
 </body>
 </html>
-
-<!-- $.post( "ajax/test.html", function( data ) {
-                    $( ".result" ).html( data );
-                }); -->
