Form de creación de contraseña creado

--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -23,11 +23,11 @@
             <div  style="display: flex; flex-direction: column; gap:2rem">
                 <div style="display: flex; flex-direction: column;">
                     <span>Contraseña</span>
-                    <input id="password" class="password" type="text">
+                    <input id="password" class="password" type="password">
                 </div>
                 <div style="display: flex; flex-direction: column;">
                     <span>Confirmar contraseña</span>
-                    <input id="passwordConfirmation" class="passwordConfirmation" type="text">
+                    <input id="passwordConfirmation" class="passwordConfirmation" type="password">
                 </div>
     
                 <button class="confirmButton">
